--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
         <h1>To-Do</h1>
 
         <div class="input-section">
-            <input type="text" placeholder="Add a new task..." id="taskInput">
+            <input type="text" id="taskInput" placeholder="Add a new task..." />
+            <input type="date" id="dueDate" />
+            <select id="priority">
+                <option value="Low">Low</option>
+                <option value="Medium">Medium</option>
+                <option value="High">High</option>
+            </select>
             <button id="addBtn"><i class='bx bx-plus'></i></button>
         </div>
+
 
         <select id="filter">
             <option value="all">All Tasks</option>
